@@ -1,3 +1,9 @@
+Mon Dec  9 04:28:50 2013  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems:  Update to RubyGems master 096db36.  Changes include
+	  support for PATH in Gemfile.lock and a typo fix from Akira Matsuda.
+	* test/rubygems:  ditto.
+
 Mon Dec  9 02:10:32 2013  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* lib/net/http/responses.rb:
